Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.13(Pandas-04-IO-with-CSV-EXCEL-and-JSON-Files).ipynb
+++ b/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.13(Pandas-04-IO-with-CSV-EXCEL-and-JSON-Files).ipynb
@@ -1429,14 +1429,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c42c370b",
+   "id": "369f4cf7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cfa24701",
+   "id": "466a5302",
    "metadata": {},
    "source": [
     "**The `df.sample()` method returns a specified number of random rows. This method returns 1 row if a number is not specified.The column names will also be returned, in addition to the sample rows.**"
@@ -1445,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4dd95647",
+   "id": "d92823b6",
    "metadata": {},
    "outputs": [
     {
@@ -2741,7 +2741,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f1f82c0b",
+   "id": "8ec45683",
    "metadata": {},
    "outputs": [
     {
@@ -2929,7 +2929,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3d9cc294",
+   "id": "1dc45d1e",
    "metadata": {},
    "outputs": [
     {
@@ -3331,7 +3331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4cf0ac3",
+   "id": "3bed01f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4608,7 +4608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9c6a46e",
+   "id": "2e3b3b43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4616,7 +4616,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "bc73b025",
+   "id": "99f52024",
    "metadata": {},
    "outputs": [
     {
@@ -4735,7 +4735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "201b16e1",
+   "id": "0e666e79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5004,7 +5004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e9df2fd",
+   "id": "4c4cb156",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5498,7 +5498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 74,
    "id": "be13ceb0",
    "metadata": {},
    "outputs": [
@@ -5607,7 +5607,7 @@
        "9  Zalaid    9     B"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5637,7 +5637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 75,
    "id": "683f9b20",
    "metadata": {},
    "outputs": [],
@@ -5647,7 +5647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 76,
    "id": "3a566ec5",
    "metadata": {},
    "outputs": [
@@ -5756,7 +5756,7 @@
        "9  Zalaid    9     B"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5786,8 +5786,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "5630f155",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>cuisine</th>\n",
+       "      <th>ingredients</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10259</td>\n",
+       "      <td>greek</td>\n",
+       "      <td>[romaine lettuce, black olives, grape tomatoes...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25693</td>\n",
+       "      <td>southern_us</td>\n",
+       "      <td>[plain flour, ground pepper, salt, tomatoes, g...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20130</td>\n",
+       "      <td>filipino</td>\n",
+       "      <td>[eggs, pepper, salt, mayonaise, cooking oil, g...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22213</td>\n",
+       "      <td>indian</td>\n",
+       "      <td>[water, vegetable oil, wheat, salt]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13162</td>\n",
+       "      <td>indian</td>\n",
+       "      <td>[black pepper, shallots, cornflour, cayenne pe...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id      cuisine                                        ingredients\n",
+       "0  10259        greek  [romaine lettuce, black olives, grape tomatoes...\n",
+       "1  25693  southern_us  [plain flour, ground pepper, salt, tomatoes, g...\n",
+       "2  20130     filipino  [eggs, pepper, salt, mayonaise, cooking oil, g...\n",
+       "3  22213       indian                [water, vegetable oil, wheat, salt]\n",
+       "4  13162       indian  [black pepper, shallots, cornflour, cayenne pe..."
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = pd.read_json('datasets/train.json')\n",
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caee9d4e",
    "metadata": {},
    "outputs": [],
    "source": []
