Module no 03 - Mathematics for Data Scientists

--- a/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.13(Pandas-04-IO-with-CSV-EXCEL-and-JSON-Files).ipynb
+++ b/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.13(Pandas-04-IO-with-CSV-EXCEL-and-JSON-Files).ipynb
@@ -1429,14 +1429,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "369f4cf7",
+   "id": "3599814b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "466a5302",
+   "id": "fd02f713",
    "metadata": {},
    "source": [
     "**The `df.sample()` method returns a specified number of random rows. This method returns 1 row if a number is not specified.The column names will also be returned, in addition to the sample rows.**"
@@ -1445,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d92823b6",
+   "id": "ea5f7e00",
    "metadata": {},
    "outputs": [
     {
@@ -2741,7 +2741,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8ec45683",
+   "id": "79166f18",
    "metadata": {},
    "outputs": [
     {
@@ -2929,7 +2929,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1dc45d1e",
+   "id": "fbf25640",
    "metadata": {},
    "outputs": [
     {
@@ -3331,7 +3331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bed01f6",
+   "id": "309392fe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4608,7 +4608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e3b3b43",
+   "id": "3664c762",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4616,7 +4616,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "99f52024",
+   "id": "191b20bb",
    "metadata": {},
    "outputs": [
     {
@@ -4735,7 +4735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e666e79",
+   "id": "60968a98",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5004,7 +5004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c4cb156",
+   "id": "f590ee34",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5786,7 +5786,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
+   "id": "cdc95d3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !cat datasets/train.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "id": "5630f155",
    "metadata": {},
    "outputs": [
@@ -5818,62 +5828,97 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10259</td>\n",
+       "      <th>13904</th>\n",
+       "      <td>47295</td>\n",
        "      <td>greek</td>\n",
-       "      <td>[romaine lettuce, black olives, grape tomatoes...</td>\n",
+       "      <td>[salt, diced tomatoes, cucumber, quinoa, feta ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>25693</td>\n",
+       "      <th>22069</th>\n",
+       "      <td>7924</td>\n",
        "      <td>southern_us</td>\n",
-       "      <td>[plain flour, ground pepper, salt, tomatoes, g...</td>\n",
+       "      <td>[freshly grated parmesan, bacon, hot red peppe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20130</td>\n",
-       "      <td>filipino</td>\n",
-       "      <td>[eggs, pepper, salt, mayonaise, cooking oil, g...</td>\n",
+       "      <th>13334</th>\n",
+       "      <td>35813</td>\n",
+       "      <td>southern_us</td>\n",
+       "      <td>[pepper, ranch dressing, fresh parsley, red po...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>22213</td>\n",
-       "      <td>indian</td>\n",
-       "      <td>[water, vegetable oil, wheat, salt]</td>\n",
+       "      <th>5694</th>\n",
+       "      <td>45355</td>\n",
+       "      <td>thai</td>\n",
+       "      <td>[lime, ginger, salt, dark soy sauce, spring on...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>13162</td>\n",
-       "      <td>indian</td>\n",
-       "      <td>[black pepper, shallots, cornflour, cayenne pe...</td>\n",
+       "      <th>2320</th>\n",
+       "      <td>11895</td>\n",
+       "      <td>mexican</td>\n",
+       "      <td>[jalapeno chilies, cilantro sprigs, canola oil...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38138</th>\n",
+       "      <td>23092</td>\n",
+       "      <td>chinese</td>\n",
+       "      <td>[brown sugar, garlic, carrots, cabbage, season...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37770</th>\n",
+       "      <td>3149</td>\n",
+       "      <td>southern_us</td>\n",
+       "      <td>[vanilla low-fat frozen yogurt, bananas, 1% lo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37507</th>\n",
+       "      <td>14530</td>\n",
+       "      <td>moroccan</td>\n",
+       "      <td>[tumeric, sweet onion, salt, white pepper, cin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22253</th>\n",
+       "      <td>9996</td>\n",
+       "      <td>vietnamese</td>\n",
+       "      <td>[baguette, cooking spray, garlic chili sauce, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15387</th>\n",
+       "      <td>8565</td>\n",
+       "      <td>southern_us</td>\n",
+       "      <td>[milk, salt, baking powder, cornmeal, vegetabl...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      id      cuisine                                        ingredients\n",
-       "0  10259        greek  [romaine lettuce, black olives, grape tomatoes...\n",
-       "1  25693  southern_us  [plain flour, ground pepper, salt, tomatoes, g...\n",
-       "2  20130     filipino  [eggs, pepper, salt, mayonaise, cooking oil, g...\n",
-       "3  22213       indian                [water, vegetable oil, wheat, salt]\n",
-       "4  13162       indian  [black pepper, shallots, cornflour, cayenne pe..."
+       "          id      cuisine                                        ingredients\n",
+       "13904  47295        greek  [salt, diced tomatoes, cucumber, quinoa, feta ...\n",
+       "22069   7924  southern_us  [freshly grated parmesan, bacon, hot red peppe...\n",
+       "13334  35813  southern_us  [pepper, ranch dressing, fresh parsley, red po...\n",
+       "5694   45355         thai  [lime, ginger, salt, dark soy sauce, spring on...\n",
+       "2320   11895      mexican  [jalapeno chilies, cilantro sprigs, canola oil...\n",
+       "38138  23092      chinese  [brown sugar, garlic, carrots, cabbage, season...\n",
+       "37770   3149  southern_us  [vanilla low-fat frozen yogurt, bananas, 1% lo...\n",
+       "37507  14530     moroccan  [tumeric, sweet onion, salt, white pepper, cin...\n",
+       "22253   9996   vietnamese  [baguette, cooking spray, garlic chili sauce, ...\n",
+       "15387   8565  southern_us  [milk, salt, baking powder, cornmeal, vegetabl..."
       ]
      },
-     "execution_count": 77,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df1 = pd.read_json('datasets/train.json')\n",
-    "df1.head()"
+    "df1.sample(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caee9d4e",
+   "id": "bdb86e5b",
    "metadata": {},
    "outputs": [],
    "source": []
