Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/03 - Data Visualization with Matplotlib and Seaborn/Lec-2.27(Data-Visualization-IV).ipynb
+++ b/Module no 02- Python for Data Scientists/03 - Data Visualization with Matplotlib and Seaborn/Lec-2.27(Data-Visualization-IV).ipynb
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1287baf7",
+   "id": "2578401b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -227,12 +227,12 @@
    "metadata": {},
    "source": [
     "## 2. Boxplot\n",
-    "<img align=\"centre\" width=\"700\" height=\"750\"  src=\"images/iqr2.png\"  >\n",
+    "<img align=\"centre\" width=\"700\" height=\"750\"  src=\"images/iqr2.PNG\"  >\n",
     "\n",
     "\n",
     "<br><br><br><br>\n",
     "\n",
-    "<img align=\"center\" width=\"500\" height=\"200\"  src=\"images/boxplot.png\"  >"
+    "<img align=\"center\" width=\"500\" height=\"200\"  src=\"images/boxplot.PNG\"  >"
    ]
   },
   {
