Module o 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.18(Pandas-09-Aggregating-and-Grouping-Data).ipynb
+++ b/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.18(Pandas-09-Aggregating-and-Grouping-Data).ipynb
@@ -23,6 +23,83 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c28ffd2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cc2676f",
+   "metadata": {},
+   "source": [
+    "### Our Main Problem :\n",
+    "Here is dataset and find minimum temperature of each city in the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0600463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('datasets/groupbydata2.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38250297",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87770105",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce0df4c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e12e544b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8379a399",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c216e41b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "9f676117",
    "metadata": {},
@@ -30,6 +107,24 @@
     "<h3><div align=\"right\">Grouping Dataframes</div></h3>  \n",
     "<img align=\"left\" width=\"1000\" height=\"1000\"  src=\"images/groupbyfinal.png\"  >"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5de1fdb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aggregation means to collect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd8d4e9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1790,6 +1885,38 @@
     "## Check Your Concepts:\n",
     "- What is Pandas?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "639ed8aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22b009d9",
+   "metadata": {},
+   "source": [
+    "## Practice Questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feeff6fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9959253",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
