--- a/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.18(Pandas-09-Aggregating-and-Grouping-Data).ipynb
+++ b/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.18(Pandas-09-Aggregating-and-Grouping-Data).ipynb
@@ -25,14 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28ffd2f",
+   "id": "67807ef1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1cc2676f",
+   "id": "4da4f056",
    "metadata": {},
    "source": [
     "### Our Main Problem :\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0600463",
+   "id": "879e8796",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38250297",
+   "id": "17bfc31d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87770105",
+   "id": "2da1d4e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce0df4c0",
+   "id": "1290f54a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e12e544b",
+   "id": "1d6b6321",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8379a399",
+   "id": "5591fd98",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c216e41b",
+   "id": "dc7df02d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5de1fdb3",
+   "id": "aaf34bf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8d4e9d",
+   "id": "fc9a951d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1335,13 +1335,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16027bd3",
+   "metadata": {},
+   "source": [
+    "### To get the count of countries whose developers participated in the survey"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6b91f3cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To get the count of countries whose developers participated in the survey\n",
     "df['Country'].value_counts().count()"
    ]
   },
@@ -1461,8 +1468,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df[df.Country=='Pakistan']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8407cccb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df.Country=='Pakistan', 'SocialMedia']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de9e9e01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df.Country=='Pakistan', 'SocialMedia'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81c6426b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1470,9 +1505,7 @@
    "id": "df9b825e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.loc[df.Country =='Pakistan', 'SocialMedia'].value_counts()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1529,7 +1562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby('Country').get_group(\"Pakistan\")"
+    "df.groupby('Country').get_group(\"Pakistan\").head()"
    ]
   },
   {
@@ -1701,7 +1734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby('Country')['Country'].apply(lambda x: x.value_counts())"
+    "df.groupby('Country')['Country'].apply(lambda x: x.value_counts()).sort_values()"
    ]
   },
   {
@@ -1830,7 +1863,9 @@
    "id": "c670b7e9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "resultdf.loc['India']"
+   ]
   },
   {
    "cell_type": "code",
@@ -1875,6 +1910,46 @@
    "id": "c8926157",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "resultdf.sample(20).sort_values(by ='Percentage', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07c567a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be4aaadf",
+   "metadata": {},
+   "source": [
+    "## Let's create your own five questions and try to answer these questions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ca2a24e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q-01 ==???\n",
+    "# Q-02 ==???\n",
+    "# Q-03 ==???\n",
+    "# Q-04 ==???\n",
+    "# Q-05 ==???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57787469",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -1889,14 +1964,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "639ed8aa",
+   "id": "27ebd30d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a218b3fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7566b692",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26bbad5a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "22b009d9",
+   "id": "ccda285f",
    "metadata": {},
    "source": [
     "## Practice Questions"
@@ -1905,7 +2004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feeff6fb",
+   "id": "f8754443",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1913,7 +2012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9959253",
+   "id": "c40819bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1939,6 +2038,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3554bb73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff169520",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b2efa7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05042401",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2150ff19",
    "metadata": {},
    "outputs": [],
    "source": []
