Module o 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.18(Pandas-09-Aggregating-and-Grouping-Data).ipynb
+++ b/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.18(Pandas-09-Aggregating-and-Grouping-Data).ipynb
@@ -25,14 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67807ef1",
+   "id": "c8dfac60",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4da4f056",
+   "id": "dff2cf90",
    "metadata": {},
    "source": [
     "### Our Main Problem :\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879e8796",
+   "id": "08cecb5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17bfc31d",
+   "id": "4d02e994",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2da1d4e4",
+   "id": "49dd502d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1290f54a",
+   "id": "6d96a7aa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d6b6321",
+   "id": "52fba827",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5591fd98",
+   "id": "fca8483c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc7df02d",
+   "id": "c803df4a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaf34bf6",
+   "id": "05732036",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc9a951d",
+   "id": "70d872b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16027bd3",
+   "id": "6d7805e3",
    "metadata": {},
    "source": [
     "### To get the count of countries whose developers participated in the survey"
@@ -1474,7 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8407cccb",
+   "id": "56ca0ff3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de9e9e01",
+   "id": "1d791710",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c6426b",
+   "id": "c55d704b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1917,14 +1917,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07c567a5",
+   "id": "ac55f989",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "be4aaadf",
+   "id": "500b1e95",
    "metadata": {},
    "source": [
     "## Let's create your own five questions and try to answer these questions."
@@ -1933,7 +1933,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ca2a24e0",
+   "id": "aa03b82b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1947,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57787469",
+   "id": "84660b49",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27ebd30d",
+   "id": "0ba322ef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1972,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a218b3fb",
+   "id": "93b5da17",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1980,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7566b692",
+   "id": "ff5af666",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1988,23 +1988,463 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26bbad5a",
+   "id": "0d36a027",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ccda285f",
+   "id": "063b790b",
    "metadata": {},
    "source": [
     "## Practice Questions"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6c2e4ff",
+   "metadata": {},
+   "source": [
+    "### Write a Pandas program to split the following dataframe into groups based on school code. Also check the type of GroupBy object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4bd4c4dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>school_code</th>\n",
+       "      <th>class</th>\n",
+       "      <th>name</th>\n",
+       "      <th>date_Of_Birth</th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>address</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>s001</td>\n",
+       "      <td>V</td>\n",
+       "      <td>Alberto Franco</td>\n",
+       "      <td>15/05/2002</td>\n",
+       "      <td>12</td>\n",
+       "      <td>173</td>\n",
+       "      <td>35</td>\n",
+       "      <td>street1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>s002</td>\n",
+       "      <td>V</td>\n",
+       "      <td>Gino Mcneill</td>\n",
+       "      <td>17/05/2002</td>\n",
+       "      <td>12</td>\n",
+       "      <td>192</td>\n",
+       "      <td>32</td>\n",
+       "      <td>street2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>s003</td>\n",
+       "      <td>VI</td>\n",
+       "      <td>Ryan Parkes</td>\n",
+       "      <td>16/02/1999</td>\n",
+       "      <td>13</td>\n",
+       "      <td>186</td>\n",
+       "      <td>33</td>\n",
+       "      <td>street3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>s001</td>\n",
+       "      <td>VI</td>\n",
+       "      <td>Eesha Hinton</td>\n",
+       "      <td>25/09/1998</td>\n",
+       "      <td>13</td>\n",
+       "      <td>167</td>\n",
+       "      <td>30</td>\n",
+       "      <td>street1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>s002</td>\n",
+       "      <td>V</td>\n",
+       "      <td>Gino Mcneill</td>\n",
+       "      <td>11/05/2002</td>\n",
+       "      <td>14</td>\n",
+       "      <td>151</td>\n",
+       "      <td>31</td>\n",
+       "      <td>street2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>s004</td>\n",
+       "      <td>VI</td>\n",
+       "      <td>David Parkes</td>\n",
+       "      <td>15/09/1997</td>\n",
+       "      <td>12</td>\n",
+       "      <td>159</td>\n",
+       "      <td>32</td>\n",
+       "      <td>street4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  school_code class            name date_Of_Birth   age  height  weight  \\\n",
+       "0        s001     V  Alberto Franco     15/05/2002   12     173      35   \n",
+       "1        s002     V    Gino Mcneill     17/05/2002   12     192      32   \n",
+       "2        s003    VI     Ryan Parkes     16/02/1999   13     186      33   \n",
+       "3        s001    VI    Eesha Hinton     25/09/1998   13     167      30   \n",
+       "4        s002     V    Gino Mcneill     11/05/2002   14     151      31   \n",
+       "5        s004    VI    David Parkes     15/09/1997   12     159      32   \n",
+       "\n",
+       "   address  \n",
+       "0  street1  \n",
+       "1  street2  \n",
+       "2  street3  \n",
+       "3  street1  \n",
+       "4  street2  \n",
+       "5  street4  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict1={\n",
+    "    'school_code': ['s001','s002','s003','s001','s002','s004'],\n",
+    "    'class': ['V', 'V', 'VI', 'VI', 'V', 'VI'],\n",
+    "    'name': ['Alberto Franco','Gino Mcneill','Ryan Parkes', 'Eesha Hinton', 'Gino Mcneill', 'David Parkes'],\n",
+    "    'date_Of_Birth ': ['15/05/2002','17/05/2002','16/02/1999','25/09/1998','11/05/2002','15/09/1997'],\n",
+    "    'age': [12, 12, 13, 13, 14, 12],\n",
+    "    'height': [173, 192, 186, 167, 151, 159],\n",
+    "    'weight': [35, 32, 33, 30, 31, 32],\n",
+    "    'address': ['street1', 'street2', 'street3', 'street1', 'street2', 'street4']}\n",
+    "df = pd.DataFrame(dict1)\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8754443",
+   "id": "ce547baa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a28dfaa1",
+   "metadata": {},
+   "source": [
+    "### Write a Pandas program to split the following dataframe by school code and get mean, min, and max value of age for each school."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc2fcac2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d407238",
+   "metadata": {},
+   "source": [
+    "### Write a Pandas program to split the above given dataframe into groups based on school code and class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "959516c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c512d1b",
+   "metadata": {},
+   "source": [
+    "### Write a Pandas program to split the above given dataframe into groups based on school code and cast grouping as a list.(Hint : list(groupbyObject))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "464a45c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cae276d",
+   "metadata": {},
+   "source": [
+    "### Write a Pandas program to split the following given dataframe into groups based on school code and call a specific group with the name of the group. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3925e1a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dad48f2",
+   "metadata": {},
+   "source": [
+    "## Practice Exercise 01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5cb5331",
+   "metadata": {},
+   "source": [
+    "#### Step 1. Import the necessary libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39bfc389",
+   "metadata": {},
+   "source": [
+    "#### Step 2. Import the dataset from this [address](https://raw.githubusercontent.com/bsef19m521/DatasetsForProjects/master/drinks.csv). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c6cc095",
+   "metadata": {},
+   "source": [
+    "#### Step 3. Assign it to a variable called drinks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "68090de5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drinks = pd.read_csv('datasets/drinks.csv')\n",
+    "# drinks.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15e5b01a",
+   "metadata": {},
+   "source": [
+    "#### Step 4. Which continent drinks more beer on average?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fd37258",
+   "metadata": {},
+   "source": [
+    "List of all continets\n",
+    "```\n",
+    "Asia \n",
+    "Africa \n",
+    "Europe \n",
+    "North America \n",
+    "South America\n",
+    "Australia/Oceania \n",
+    "Antarctica\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fcd7559",
+   "metadata": {},
+   "source": [
+    "#### Step 5. For each continent print the statistics for wine consumption."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdf73ece",
+   "metadata": {},
+   "source": [
+    "#### Step 6. Print the mean alcohol consumption per continent for every column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7644746",
+   "metadata": {},
+   "source": [
+    "#### Step 7. Print the median alcohol consumption per continent for every column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b93ed160",
+   "metadata": {},
+   "source": [
+    "#### Step 8. Print the mean, min and max values for spirit consumption.\n",
+    "#### This time output a DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd1798d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f3cf57a",
+   "metadata": {},
+   "source": [
+    "## Practice Exercise 02"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a871968",
+   "metadata": {},
+   "source": [
+    "#### Step 1. Import the necessary libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb720443",
+   "metadata": {},
+   "source": [
+    "#### Step 2. Import the dataset from this [address](https://raw.githubusercontent.com/bsef19m521/DatasetsForProjects/master/occupation.user). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6608e4f",
+   "metadata": {},
+   "source": [
+    "#### Step 3. Assign it to a variable called users."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "53703e4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users = pd.read_csv('datasets/occupation.user', delimiter=\"|\")\n",
+    "# users.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8eced0f",
+   "metadata": {},
+   "source": [
+    "#### Step 4. Discover what is the mean age per occupation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6a1ee94",
+   "metadata": {},
+   "source": [
+    "#### Step 5. Discover the Male ratio per occupation and sort it from the most to the least\n",
+    "First 1: We calculate value count of each occupation.         \n",
+    "Second 2: We find value count of gender `Male` against each occupation              \n",
+    "Third 3: We find percentage and sort our result          "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e92b3592",
+   "metadata": {},
+   "source": [
+    "#### Step 6. For each occupation, calculate the minimum and maximum ages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de4f797c",
+   "metadata": {},
+   "source": [
+    "#### Step 7. For each combination of occupation and gender, calculate the mean age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fdefd69",
+   "metadata": {},
+   "source": [
+    "#### Step 8.  For each occupation represents the percentage of women and men."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1828f4b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a data frame and apply count to gender\n",
+    "gender_ocup = users.groupby(['occupation', 'gender']).agg({'gender': 'count'})\n",
+    "\n",
+    "# create a DataFrame and apply count for each occupation\n",
+    "occup_count = users.groupby(['occupation']).agg('count')\n",
+    "\n",
+    "# divide the gender_ocup per the occup_count and multiply per 100\n",
+    "occup_gender = gender_ocup.div(occup_count, level = \"occupation\") * 100\n",
+    "\n",
+    "# present all rows from the 'gender column'\n",
+    "occup_gender.loc[: , 'gender']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8985fa9d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2012,15 +2452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c40819bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4954524",
+   "id": "fb2132a9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2045,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff169520",
+   "id": "d693dfdc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2053,7 +2485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b2efa7c",
+   "id": "8a60c987",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2061,7 +2493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05042401",
+   "id": "e73adba8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2069,7 +2501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2150ff19",
+   "id": "1ad9b7f5",
    "metadata": {},
    "outputs": [],
    "source": []
