--- a/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.19(Pandas-10-Appending-Concatenating-Merging-Joining-Dataframes).ipynb
+++ b/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.19(Pandas-10-Appending-Concatenating-Merging-Joining-Dataframes).ipynb
@@ -842,7 +842,7 @@
    "source": [
     "## Concatenation of  DataFrames (Row Wise + Column Wise)\n",
     "\n",
-    "<img align=\"left\" width=\"350\" height=\"90\"  src=\"images/row.png\"  >\n",
+    "<img align=\"left\" width=\"350\" height=\"90\"  src=\"images/row.PNG\"  >\n",
     "<img align=\"right\" width=\"490\" height=\"100\"  src=\"images/concat_2.png\" >\n",
     "\n",
     "<br><br><br><br><br><br><br><br><br><br>\n",
@@ -868,7 +868,7 @@
    "metadata": {},
    "source": [
     "## 3. Row-Wise Concatenation\n",
-    "<img align=\"left\" width=\"350\" height=\"90\"  src=\"images/row.png\"  >"
+    "<img align=\"left\" width=\"350\" height=\"90\"  src=\"images/row.PNG\"  >"
    ]
   },
   {
@@ -1713,6 +1713,437 @@
     "df3 =  Pak_Weather.append(d1)\n",
     "df3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "387ed728",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b87a9b3",
+   "metadata": {},
+   "source": [
+    "## Practice Exercise no 01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe13e286",
+   "metadata": {},
+   "source": [
+    "### Introduction:\n",
+    "#### Housing Market\n",
+    "This time we will create our own dataset with fictional numbers to describe a house market. As we are going to create random data don't try to reason of the numbers.\n",
+    "\n",
+    "### Step 1. Import the necessary libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f73aef41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af821500",
+   "metadata": {},
+   "source": [
+    "### Step 2. Create 3 differents Series, each of length 100, as follows: \n",
+    "1. The first a random number from 1 to 4 \n",
+    "2. The second a random number from 1 to 3\n",
+    "3. The third a random number from 10,000 to 30,000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2dd87926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series1 =pd.Series(np.random.randint(1,5,100))\n",
+    "series2 =pd.Series(np.random.randint(1,4,100))\n",
+    "series3 =pd.Series(np.random.randint(10000,30001,100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "112b203a",
+   "metadata": {},
+   "source": [
+    "### Step 3. Let's create a DataFrame by joinning the Series by column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fd7e1f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10765</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  1      2\n",
+       "0  2  1  11358\n",
+       "1  2  3  17656\n",
+       "2  4  1  28708\n",
+       "3  3  2  23888\n",
+       "4  2  1  10765"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.concat([series1,series2,series3], axis=1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2618f1a1",
+   "metadata": {},
+   "source": [
+    "### Step 4. Change the name of the columns to bedrs, bathrs, price_sqr_meter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "76e3ee39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedrs</th>\n",
+       "      <th>bathrs</th>\n",
+       "      <th>price_sqr_meter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10765</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bedrs  bathrs  price_sqr_meter\n",
+       "0      2       1            11358\n",
+       "1      2       3            17656\n",
+       "2      4       1            28708\n",
+       "3      3       2            23888\n",
+       "4      2       1            10765"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.rename(columns={0:'bedrs',1:'bathrs',2:'price_sqr_meter'})\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cce7698",
+   "metadata": {},
+   "source": [
+    "### Step 5. Create a one column DataFrame with the values of the 3 Series and assign it to 'bigcolumn'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2256fe70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>15774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>18584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>10728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>13481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>13679</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0\n",
+       "0       2\n",
+       "1       2\n",
+       "2       4\n",
+       "3       3\n",
+       "4       2\n",
+       "..    ...\n",
+       "95  15774\n",
+       "96  18584\n",
+       "97  10728\n",
+       "98  13481\n",
+       "99  13679\n",
+       "\n",
+       "[300 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bigcolumn = pd.concat([series1,series2,series3], axis=0)\n",
+    "bigcolumn.head()\n",
+    "\n",
+    "# it is still a series, we need to transform it into dataframe\n",
+    "bigcolumn = bigcolumn.to_frame()\n",
+    "bigcolumn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "097795dc",
+   "metadata": {},
+   "source": [
+    "### Step 6. Oops, it seems it is going only until index 99. Is it true?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "afe44a99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# No it is not true, the length of dataframe of 300\n",
+    "len(bigcolumn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7cc3bd7",
+   "metadata": {},
+   "source": [
+    "### Step 7. Reindex the DataFrame so it goes from 0 to 299"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cc3455f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c119f9df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "367a7ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
